--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
         </address>
         <h4>Telefone:</h4>
         <address>
-        +55 (11) 1234-5678<br>
+        +55 (48) 92000-4767<br>
         </address>
         <h4>E-mail:</h4>
         <address>
-        contato@modernwebsolutions.com.br<br>
+        matheus.tomazi5@gmail.com.br<br>
         </address>
       </div>
     </div>
